--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -482,7 +482,7 @@
 		
 		<div id="navigation">
 			<ul id="nav">
-				<li><%= link_to "Home", home_path(@home) %></li>				
+				<li><%= link_to "Domov", home_path(@home) %></li>				
 				<li><%= link_to "Info", info_path(@info) %></li>
 				<li><%= link_to "Admin", admin_path(@admin) %></li>
 			</ul>
