--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -488,6 +488,7 @@
 			</ul>
 		</div>
 		
+		<%= debug(params) if Rails.env.development? %>
 		<%= javascript_include_tag "jquery-1.11.2.min.js" %>
 		<%= javascript_include_tag "leaflet.js" %>
 		<%= javascript_include_tag "leaflet.label.js" %>
