--- a/app/views/pages/info.html.erb
+++ b/app/views/pages/info.html.erb
@@ -24,6 +24,7 @@
 			</ul>
 		</div>
 		
+		<%= debug(params) if Rails.env.development? %>
 		<%= javascript_include_tag "jquery-1.11.2.min.js" %>
 		<%= javascript_include_tag "script.js" %>
 	</body>
