--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -128,6 +128,13 @@ h2 {
 	color: #383838; font-family: BEBAS, sans-serif; font-size: 1em;
 	position: absolute;}
 
+/* ADMIN */
+
+#admin {
+	background-color: rgba(255,255,255,0.7);
+	width: 30em; padding: 0.2em;
+	position: relative; top: 10em; left: 40%;}
+
 /* NAVIGATION */
 
 #navigation {
