--- a/app/views/pages/admin.html.erb
+++ b/app/views/pages/admin.html.erb
@@ -18,11 +18,11 @@
 		
 		<div id="admin">
 			<form id="login">
-				<label for="admin_name">Uporabni&#353;ko ime: </label>
-				<input type="text" name="admin_name" size=25 maxlength=50>
-				<label for="admin_password">Geslo: </label>
-				<input type="password" name="admin_password" size=25 maxlength=50>
-				<input type="submit" name="admin_submit" value="Vpis">
+				<label for="name"> Uporabni&#353;ko ime: </label>
+				<input id="name" type="text" name="user[name]" size=25 maxlength=50>
+				<label for="password"> Geslo: </label>
+				<input id="password" type="password" name="user[password]" size=25 maxlength=50>
+				<input type="submit" name="submit" value="Vpis">
 			</form>
 		</div>
 		
