--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -49,7 +49,7 @@
 								<ul class="subcategories">
 									<li> kravje mleko </li>
 									<li> kozje mleko </li>
-									<li> ovèje mleko </li>
+									<li> ov&#269;je mleko </li>
 								</ul>
 							</div>
 							<div class="column">
@@ -484,7 +484,7 @@
 			<ul id="nav">
 				<li><%= link_to "Domov", home_path(@home) %></li>				
 				<li><%= link_to "Info", info_path(@info) %></li>
-				<li><%= link_to "Admin", admin_path(@admin) %></li>
+				<li><%= link_to "Vpis", signin_path(@signin) %></li>
 			</ul>
 		</div>
 		
