--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -25,6 +25,7 @@
 		</div>
 		
 		<%= debug(params) if Rails.env.development? %>
+		<%= javascript_include_tag :defaults %>
 		<%= javascript_include_tag "jquery-1.11.2.min.js" %>
 		<%= javascript_include_tag "script.js" %>
 	</body>
