--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -373,7 +373,7 @@
 								<h3> OSTALO </h3>
 								<ul class="subcategories">
 									<li> sladka koruza </li>
-									<li> parglji </li>
+									<li> &#352;parglji </li>
 									<li> topinambur </li>
 								</ul>
 							</div>
