--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -129,9 +129,9 @@ h2 {
 	color: #383838; font-family: BEBAS, sans-serif; font-size: 1em;
 	position: absolute;}
 
-/* ADMIN */
+/* SIGN IN */
 
-#admin {
+#signin {
 	background-color: rgba(255,255,255,0.7);
 	width: 35em; padding: 0.2em;
 	position: absolute; top: 10em; left: 33%;}
@@ -139,6 +139,19 @@ h2 {
 .flash {
 	color: red; font-size: 1.2em;
 	padding: 0.2em;}
+
+/* ADD */
+
+#add {
+	background-color: rgba(255,255,255,0.7);
+	width: 35em; padding: 0.2em;
+	position: absolute; top: 6em; left: 1em;}
+
+/* SHOW */
+
+#show {
+	background-color: rgba(255,255,255,0.7);
+	position: absolute; top: 6em; left: 40em;}
 
 /* NAVIGATION */
 
