--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -484,6 +484,7 @@
 			<ul id="nav">
 				<li><%= link_to "Domov", home_path(@home) %></li>				
 				<li><%= link_to "Info", info_path(@info) %></li>
+				<li><%= link_to "Vpis", signin_path(@show) %></li>				
 			</ul>
 		</div>
 		
