--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -24,7 +24,7 @@ body {
 
 #filters {
 	padding: 0; margin: 0.5em 0 0 1em;
-	position: relative; float: left;}
+	position: relative; float: left; z-index: 10;}
 
 #categories {
 	padding: 0;
@@ -56,12 +56,12 @@ h2 {
 	width: 98%; padding: 0.2em 0.5em; margin: 1em 0;}
 
 #clearSelection:hover {
-	width: 98%; padding: 0.1em 0.3em; border-width: 0.1em 0.2em 0.2em 0.1em; border-style: solid; border-color: white;}
+	border-width: 0.1em 0.2em 0.2em 0.1em; border-style: solid; border-color: white;}
 
 .menu {
 	background-color: rgba(255,255,255,0.95);
 	height: 37.7em; width: 32em; padding: 0.3em; display: none;
-	position: absolute; top: 0; left: 20em; z-index: 10;}
+	position: absolute; top: 0; left: 20em;}
 
 #zelenjava .menu {
 	width: 62em;}
