--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -83,8 +83,12 @@ h2 {
 	padding: 0.1em 0.5em;
 	cursor: pointer;}
 
-.selection {
-	width: 20em}
+/* SELECTION */
+
+#selection {
+	background-color: rgba(255,255,255,0.9);
+	height: 2.5em; width: 96em; overflow: hidden; margin: 0.5em; display: inline-block;
+	position: absolute; z-index: 1; top: 5em; left: 21.6em;}
 
 .item {
 	color: white; background-color: deeppink; vertical-align: middle;
@@ -97,13 +101,13 @@ h2 {
 .close {
 	padding: 0 0 0 0.5em; display: inline-block;
 	cursor: pointer;}
-	
+
 /* MAP */
 
 #map {
 	background-color: rgba(255,255,255,0.9); 
 	height: 40em; width: 80em; border: medium solid black; margin: 0.5em; display: inline-block;
-	position: absolute; z-index: 1; top: 4em; left: 18em;}
+	position: absolute; z-index: 1; top: 7em; left: 18em;}
 
 .international{
 	color: #383838; font-family: BEBAS, sans-serif; font-size: 2em;
@@ -158,7 +162,7 @@ h2 {
 #navigation {
 	background-color: rgba(255,255,255,0.7);
 	padding: 0.2em;
-	position: relative; top: 50em;}
+	position: relative; top: 52.5em;}
 
 #nav {
 	text-align: center;
