--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -24,7 +24,7 @@
 			<div id="categories">
 				<h1>Izdelki</h1>
 				<ul id="categories-list">
-					<li class="category" id="med">
+					<li class="category">
 						<div class="menu">
 							<div class="column">
 								<h3> MED IN &#268;EBELARSKI IZDELKI </h3>
@@ -40,7 +40,7 @@
 						</div>
 						<h2> Med in &#269;ebelarski izdelki </h2>
 					</li>
-					<li class="category" id="mleko">
+					<li class="category">
 						<div class="menu">
 							<div class="column">
 								<h3> MLEKO </h3>
@@ -62,7 +62,7 @@
 								</ul>
 							</div>
 							<div class="column">
-								<h3> OSTALO </h3>
+								<h3> OSTALI MLE&#268;NI IZDELKI </h3>
 								<ul class="subcategories">
 									<li> skuta </li>
 									<li> sladka smetana </li>
@@ -74,7 +74,7 @@
 						</div>
 						<h2> Mleko in mle&#269;ni izdelki </h2>
 					</li>
-					<li class="category" id="moka">
+					<li class="category">
 						<div class="menu">
 							<div class="column">
 								<h3> MOKA </h3>
@@ -105,7 +105,7 @@
 						</div>
 						<h2> Moka in izdelki iz &#382;it </h2>
 					</li>
-					<li class="category" id="olje">
+					<li class="category">
 						<div class="menu">
 							<div class="column">
 								<h3> OLJE </h3>
@@ -119,7 +119,7 @@
 								</ul>
 							</div>
 							<div class="column">
-								<h3> KISI </h3>
+								<h3> KIS </h3>
 								<ul class="subcategories">
 									<li> vinski kis </li>
 									<li> jabol&#269;ni kis </li>
@@ -131,7 +131,7 @@
 						</div>
 						<h2> Olja in kisi </h2>
 					</li>
-					<li class="category" id="ozimnica">
+					<li class="category">
 						<div class="menu">
 							<div class="column">
 								<h3> OZIMNICA </h3>
@@ -146,7 +146,7 @@
 							<div class="column">
 								 <h3> SOKOVI </h3>
 								 <ul class="subcategories">
-									<li> jabolèni sok </li>
+									<li> jabol&#269;ni sok </li>
 									<li> hru&#353;kov sok </li>
 									<li> grozdni sok </li>
 									<li> bezgov sok </li>
@@ -158,16 +158,16 @@
 						</div>
 						<h2> Ozimnica in sokovi </h2>
 					</li>
-					<li class="category" id="sadje">
+					<li class="category">
 						<div class="menu">
 							<div class="column">
 								<h3> PE&#268;KASTO SADJE </h3>
 								<ul class="subcategories">
 									<li> jabolka </li>
-									<li> hruke </li>
+									<li> hru&#353;ke </li>
 									<li> kaki </li>
 									<li> kutine </li>
-									<li> neplje </li>
+									<li> ne&#353;plje </li>
 									<li> lubenice </li>
 									<li> melone </li>
 									<li> fige (smokve) </li>
@@ -214,7 +214,7 @@
 						</div>
 						<h2> Sadje in ore&#353;&#269;ki </h2>
 					</li>
-					<li class="category" id="semena">
+					<li class="category">
 						<div class="menu">
 							<div class="column">
 								<h3> SEMENA IN SADIKE </h3>
@@ -228,7 +228,7 @@
 						</div>
 						<h2> Semena in sadike </h2>
 					</li>
-					<li class="category" id="vino">
+					<li class="category">
 						<div class="menu">
 							<div class="column">
 								<h3> RDE&#268;A VINA </h3>
@@ -262,7 +262,7 @@
 						</div>
 						<h2> Vino </h2>
 					</li>
-					<li class="category" id="zacimbe">
+					<li class="category">
 						<div class="menu">
 							<div class="column">
 								<h3> ZA&#268;IMBE, ZELI&#352;&#268;A IN &#268;AJI </h3>
@@ -362,7 +362,7 @@
 						</div>
 						<h2> Zelenjava </h2>
 					</li>
-					<li class="category" id="zganje">
+					<li class="category">
 						<div class="menu">
 							<div class="column">
 								<h3> &#381;GANE PIJA&#268;E IN LIKERJI </h3>
@@ -379,7 +379,7 @@
 						</div>
 						<h2> &#381;gane pija&#269;e in likerji </h2>
 					</li>
-					<li class="category" id="meso">
+					<li class="category">
 						<div class="menu">
 							<div class="column">
 								<h3> MESO </h3>
@@ -414,7 +414,7 @@
 						</div>
 						<h2> &#381;ivalski izdelki </h2>
 					</li>
-					<li class="category" id="ostalo">
+					<li class="category">
 						<div class="menu">
 							<div class="column">
 								<h3> OSTALO </h3>
@@ -432,7 +432,7 @@
 						</div>
 						<h2> Ostalo </h2>
 					</li>
-					<li class="category" id="certifikati">
+					<li class="category">
 						<div class="menu">
 							<div class="column">
 								<h3> CERTIFIKATI </h3>
