--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -72,8 +72,7 @@ h2 {
 
 .column h3 {
 	font-weight: normal;
-	width: auto; padding: 0.2em 0.5em; margin: 0;
-	cursor: pointer;}
+	width: auto; padding: 0.2em 0.5em; margin: 0;}
 
 .subcategories{
 	padding: 0; margin: 0;
