--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -27,7 +27,7 @@
 					<li class="category">
 						<div class="menu">
 							<div class="column">
-								<h3> MED IN &#268;EBELARSKI IZDELKI </h3>
+								<h2> MED IN &#268;EBELARSKI IZDELKI </h2>
 								<ul class="subcategories">
 									<li> med </li>
 									<li> medica </li>
@@ -43,7 +43,7 @@
 					<li class="category">
 						<div class="menu">
 							<div class="column">
-								<h3> MLEKO </h3>
+								<h2> MLEKO </h2>
 								<ul class="subcategories">
 									<li> kravje mleko </li>
 									<li> kozje mleko </li>
@@ -51,7 +51,7 @@
 								</ul>
 							</div>
 							<div class="column">
-								<h3> SIR </h3>
+								<h2> SIR </h2>
 								<ul class="subcategories">
 									<li> kravji sir </li>
 									<li> kozji sir </li>
@@ -62,7 +62,7 @@
 								</ul>
 							</div>
 							<div class="column">
-								<h3> OSTALI MLE&#268;NI IZDELKI </h3>
+								<h2> OSTALI MLE&#268;NI IZDELKI </h2>
 								<ul class="subcategories">
 									<li> skuta </li>
 									<li> sladka smetana </li>
@@ -77,7 +77,7 @@
 					<li class="category">
 						<div class="menu">
 							<div class="column">
-								<h3> MOKA </h3>
+								<h2> MOKA </h2>
 								<ul class="subcategories">
 									<li> p&#353;eni&#269;na moka </li>
 									<li> ajdova moka </li>
@@ -91,7 +91,7 @@
 								</ul>
 							</div>
 							<div class="column">
-								<h3> IZDELKI IZ &#381;IT </h3>
+								<h2> IZDELKI IZ &#381;IT </h2>
 								<ul class="subcategories">
 									<li> kruh </li>
 									<li> pecivo </li>
@@ -108,7 +108,7 @@
 					<li class="category">
 						<div class="menu">
 							<div class="column">
-								<h3> OLJE </h3>
+								<h2> OLJE </h2>
 								<ul class="subcategories">
 									<li> olj&#269;no olje </li>
 									<li> son&#269;ni&#269;no olje </li>
@@ -119,7 +119,7 @@
 								</ul>
 							</div>
 							<div class="column">
-								<h3> KIS </h3>
+								<h2> KIS </h2>
 								<ul class="subcategories">
 									<li> vinski kis </li>
 									<li> jabol&#269;ni kis </li>
@@ -134,7 +134,7 @@
 					<li class="category">
 						<div class="menu">
 							<div class="column">
-								<h3> OZIMNICA </h3>
+								<h2> OZIMNICA </h2>
 								<ul class="subcategories">
 									<li> marmelade </li>
 									<li> vlo&#382;ena zelenjava </li>
@@ -144,7 +144,7 @@
 								</ul>
 							</div>
 							<div class="column">
-								 <h3> SOKOVI </h3>
+								 <h2> SOKOVI </h2>
 								 <ul class="subcategories">
 									<li> jabol&#269;ni sok </li>
 									<li> hru&#353;kov sok </li>
@@ -158,10 +158,10 @@
 						</div>
 						<h2> Ozimnica in sokovi </h2>
 					</li>
-					<li class="category">
+					<li class="category" id="sadje">
 						<div class="menu">
 							<div class="column">
-								<h3> PE&#268;KASTO SADJE </h3>
+								<h2> PE&#268;KASTO SADJE </h2>
 								<ul class="subcategories">
 									<li> jabolka </li>
 									<li> hru&#353;ke </li>
@@ -170,12 +170,10 @@
 									<li> ne&#353;plje </li>
 									<li> lubenice </li>
 									<li> melone </li>
-									<li> fige (smokve) </li>
-									<li> agrumi </li>
 								</ul>
 							</div>
 							<div class="column">
-								<h3> KO&#352;&#268;I&#268;ASTO SADJE </h3>
+								<h2> KO&#352;&#268;I&#268;ASTO SADJE </h2>
 								<ul class="subcategories">
 									<li> &#269;e&#353;nje </li>
 									<li> breskve </li>
@@ -189,7 +187,7 @@
 								</ul>
 							</div>
 							<div class="column">
-								<h3> JAGODI&#268;ASTO SADJE </h3>
+								<h2> JAGODI&#268;ASTO SADJE </h2>
 								<ul class="subcategories">
 									<li> jagode </li>
 									<li> borovnice </li>
@@ -202,11 +200,22 @@
 								</ul>
 							</div>
 							<div class="column">
-								<h3> ORE&#352;&#268;KI IN SUHO SADJE </h3>
+								<h2> JU&#381;NO SADJE </h2>
+								<ul class="subcategories">
+									<li> kakiji </li>
+									<li> fige </li>
+									<li> agrumi </li>
+									<li> kiviji </li>
+									<li> granatna jabolka </li>
+								</ul>
+							</div>
+							<div class="column">
+								<h2> ORE&#352;&#268;KI IN SUHO SADJE </h2>
 								<ul class="subcategories">
 									<li> orehi </li>
 									<li> le&#353;niki </li>
 									<li> mandlji </li>
+									<li> kostanj </li>
 									<li> suho sadje </li>
 									<li> krhlji </li>
 								</ul>
@@ -217,7 +226,7 @@
 					<li class="category">
 						<div class="menu">
 							<div class="column">
-								<h3> SEMENA IN SADIKE </h3>
+								<h2> SEMENA IN SADIKE </h2>
 								<ul class="subcategories">
 									<li> semena polj&#353;&#269;in </li>
 									<li> semena zelenjave </li>
@@ -231,7 +240,7 @@
 					<li class="category">
 						<div class="menu">
 							<div class="column">
-								<h3> RDE&#268;A VINA </h3>
+								<h2> RDE&#268;A VINA </h2>
 								<ul class="subcategories">
 									<li> refo&#353;k </li>
 									<li> merlot </li>
@@ -243,7 +252,7 @@
 								</ul>
 							</div>
 							<div class="column">
-								<h3> BELA VINA </h3>
+								<h2> BELA VINA </h2>
 								<ul class="subcategories">
 									<li> la&#353;ki rizling </li>
 									<li> chardonnay </li>
@@ -265,7 +274,7 @@
 					<li class="category">
 						<div class="menu">
 							<div class="column">
-								<h3> ZA&#268;IMBE, ZELI&#352;&#268;A IN &#268;AJI </h3>
+								<h2> ZA&#268;IMBE, ZELI&#352;&#268;A IN &#268;AJI </h2>
 								<ul class="subcategories">
 									<li> za&#269;imbe </li>
 									<li> zeli&#353;&#269;a </li>
@@ -279,7 +288,7 @@
 					<li class="category" id="zelenjava">
 						<div class="menu">
 							<div class="column">
-								<h3> LISTNATA ZELENJAVA </h3>
+								<h2> LISTNATA ZELENJAVA </h2>
 								<ul class="subcategories">
 									<li> solata </li>
 									<li> endivija </li>
@@ -292,7 +301,7 @@
 								</ul>
 							</div>
 							<div class="column">
-								<h3> GOMOLJNICE IN KORENOVKE </h3>
+								<h2> GOMOLJNICE IN KORENOVKE </h2>
 								<ul class="subcategories">
 									<li> krompir </li>
 									<li> koren&#269;ek </li>
@@ -300,15 +309,12 @@
 									<li> pastinak </li>
 									<li> zelena </li>
 									<li> rde&#269;a pesa </li>
-									<li> koleraba </li>
-									<li> repa </li>
-									<li> redkev </li>
 								</ul>
 							</div>
 							<div class="column">
-								<h3> PLODOVKE </h3>
+								<h2> PLODOVKE </h2>
 								<ul class="subcategories">
-									<li> paradi&#353;nik </li>
+									<li> paradi&#382;nik </li>
 									<li> paprika </li>
 									<li> feferoni </li>
 									<li> jaj&#269;evci </li>
@@ -318,7 +324,7 @@
 								</ul>
 							</div>
 							<div class="column">
-								<h3> STRO&#268;NICE </h3>
+								<h2> STRO&#268;NICE </h2>
 								<ul class="subcategories">
 									<li> fi&#382;ol </li>
 									<li> stro&#269;ji fi&#382;ol </li>
@@ -331,7 +337,7 @@
 								</ul>
 							</div>
 							<div class="column">
-								<h3> &#268;EBULNICE </h3>
+								<h2> &#268;EBULNICE </h2>
 								<ul class="subcategories">
 									<li> &#269;ebula </li>
 									<li> &#269;esen </li>
@@ -342,17 +348,20 @@
 								</ul>
 							</div>
 							<div class="column">
-								<h3> KAPUSNICE </h3>
+								<h2> KAPUSNICE </h2>
 								<ul class="subcategories">
 									<li> cveta&#269;a </li>
 									<li> brokoli </li>
 									<li> zelje </li>
+									<li> repa </li>
+									<li> koleraba </li>
+									<li> redkev </li>
 									<li> ohrovt </li>
 									<li> brsti&#269;ni ohrovt </li>
 								</ul>
 							</div>
 							<div class="column">
-								<h3> OSTALO </h3>
+								<h2> OSTALO </h2>
 								<ul class="subcategories">
 									<li> sladka koruza </li>
 									<li> &#352;parglji </li>
@@ -365,7 +374,7 @@
 					<li class="category">
 						<div class="menu">
 							<div class="column">
-								<h3> &#381;GANE PIJA&#268;E IN LIKERJI </h3>
+								<h2> &#381;GANE PIJA&#268;E IN LIKERJI </h2>
 								<ul class="subcategories">
 									<li> &#382;ganje </li>
 									<li> sadjevec </li>
@@ -382,7 +391,7 @@
 					<li class="category">
 						<div class="menu">
 							<div class="column">
-								<h3> MESO </h3>
+								<h2> MESO </h2>
 								<ul class="subcategories">
 									<li> govedina </li>
 									<li> teletina </li>
@@ -396,7 +405,7 @@
 								</ul>
 							</div>
 							<div class="column">
-								<h3> MESNI IZDELKI </h3>
+								<h2> MESNI IZDELKI </h2>
 								<ul class="subcategories">
 									<li> suhomesni izdelki </li>
 									<li> prekajeno meso </li>
@@ -404,7 +413,7 @@
 								</ul>
 							</div>
 							<div class="column">
-								<h3> OSTALO </h3>
+								<h2> OSTALO </h2>
 								<ul class="subcategories">
 									<li> ribe </li>
 									<li> jajca </li>
@@ -417,7 +426,7 @@
 					<li class="category">
 						<div class="menu">
 							<div class="column">
-								<h3> OSTALO </h3>
+								<h2> OSTALO </h2>
 								<ul class="subcategories">
 									<li> sojin tofu </li>
 									<li> sojino mleko </li>
@@ -435,7 +444,7 @@
 					<li class="category">
 						<div class="menu">
 							<div class="column">
-								<h3> CERTIFIKATI </h3>
+								<h2> CERTIFIKATI </h2>
 								<ul class="subcategories">
 									<li> Biodar </li>
 									<li> Demeter </li>
@@ -462,10 +471,6 @@
 			</ul>
 		</div>
 		
-		<%= debug(params) if Rails.env.development? %>
-		<%= stylesheet_link_tag "main.css" %>
-		<%= stylesheet_link_tag "leaflet.css" %>
-		<%= stylesheet_link_tag "leaflet.label.css" %>
 		<%= javascript_include_tag "jquery-1.11.2.min.js" %>
 		<%= javascript_include_tag "leaflet.js" %>
 		<%= javascript_include_tag "leaflet.label.js" %>
