--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,7 +18,7 @@
 		
 		<div id="add">
 			<h2>Dodaj kmetijo</h2><br />
-			<%= form_for(:farm, :url => farms_path) do |f| %>
+			<%= form_for(:farm, :url => url_for(:controller => 'farms', :action => "create")) do |f| %>
 				<%= f.label :name, "Ime kmetije" %><br />
 				<%= f.text_field :name %>
 				<%= f.label :region, "Območje" %><br />
@@ -56,7 +56,7 @@
 						<td><%= farm.east %></td>
 						<td><%= farm.description %></td>
 						<td><%= farm.products %></td>
-						<td><%= link_to "delete", farm, :method => :delete, :confirm => "Izbrišem?", :title => farm.name %></td>
+						<td><%= link_to "Izbris", farm, :method => :delete, :confirm => "Izbrišem?", :title => farm.name %></td>
 					</tr>
 					<% end %>
 				<% end %>
@@ -74,7 +74,6 @@
 			</ul>
 		</div>
 		
-		<%= debug(params) if Rails.env.development? %>
 		<%= javascript_include_tag :defaults %>
 		<%= javascript_include_tag "jquery-1.11.2.min.js" %>
 		<%= javascript_include_tag "script.js" %>
