--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -48,8 +48,7 @@ body {
 
 h2 {
 	font-weight: normal;
-	margin: 0;
-	cursor: pointer;}
+	margin: 0;}
 
 #clearSelection {
 	color: white; background-color: black;
@@ -63,6 +62,9 @@ h2 {
 	height: 37.7em; width: 32em; padding: 0.3em; display: none;
 	position: absolute; top: 0; left: 20em;}
 
+#sadje .menu {
+	width: 48em;}
+
 #zelenjava .menu {
 	width: 62em;}
 
@@ -70,23 +72,23 @@ h2 {
 	vertical-align: top;
 	width: 15em; margin: 0 0 1em 0; display: inline-block;}
 
-.column h3 {
-	font-weight: normal;
-	width: auto; padding: 0.2em 0.5em; margin: 0;}
+.column h2 {
+	width: auto; padding: 0.2em 0.3em;}
 
 .subcategories{
 	padding: 0; margin: 0;
 	list-style-type: none;}
 
 .subcategories li {
-	padding: 0.1em 0.5em;
+	font-size: 1.2em;
+	padding: 0.1em 0.4em;
 	cursor: pointer;}
 
 /* SELECTION */
 
 #selection {
 	background-color: rgba(255,255,255,0.9);
-	height: 2.5em; width: 96em; overflow: hidden; margin: 0.5em; display: inline-block;
+	height: 2.8em; width: 96em; overflow: hidden; margin: 0.5em; display: inline-block;
 	position: absolute; z-index: 1; top: 5em; left: 21.6em;}
 
 .item {
@@ -94,7 +96,7 @@ h2 {
 	padding: 0.3em 0.5em; margin: 0.3em; display: inline-block;}
 	
 .item h4 {
-	font-weight: normal;
+	font-weight: normal; font-size: 1.2em;
 	margin: 0; display: inline-block;}
 	
 .close {
@@ -155,6 +157,15 @@ h2 {
 #show {
 	background-color: rgba(255,255,255,0.7);
 	position: absolute; top: 6em; left: 40em;}
+	
+#farms {
+	width: 80em;}
+	
+th, td {
+	padding: 0.5em;}
+	
+th {
+	border-bottom: 0.3em solid black; border-right: 0.1em solid black;}
 
 /* NAVIGATION */
 
